--- a/ASMC.Core/View/WriteText.xaml
+++ b/ASMC.Core/View/WriteText.xaml
@@ -4,8 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ASMC.Core.View"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:ui="clr-namespace:ASMC.Core.UI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <dxmvvm:Interaction.Behaviors>
+        <ui:MessageBoxService/>
+    </dxmvvm:Interaction.Behaviors>
     <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type Button}" x:Key="formatTextStyle">
