--- a/ASMC/App.xaml
+++ b/ASMC/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ASMC" 
-             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm">
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core">
     <Application.Resources>
-        <dxmvvm:WindowService x:Key="MainWindowService"></dxmvvm:WindowService>
+       
     </Application.Resources>
 </Application>
