--- a/ASMC/View/LoginWindow.xaml
+++ b/ASMC/View/LoginWindow.xaml
@@ -1,12 +1,19 @@
-﻿<UserControl x:Class="ASMC.View.LoginWindow"
+﻿<Page x:Class="ASMC.View.LoginWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ASMC.View"
+             xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <dxmvvm:Interaction.Behaviors>
+        <ui:MessageBoxService/>
+    <ui:ProgressService/>
+    <ui:WindowService Name="Test" WindowShowMode="Default" Title="Test" SizeToContent="WidthAndHeight"></ui:WindowService>
+        </dxmvvm:Interaction.Behaviors>
+            <Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="161,104,0,0" VerticalAlignment="Top" Width="75"/>
+
     </Grid>
-</UserControl>
+</Page>
