--- a/ASMC.Core/View/ReadAndWriteText.xaml
+++ b/ASMC.Core/View/ReadAndWriteText.xaml
@@ -2,8 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:ui="clr-namespace:ASMC.Core.UI"
              mc:Ignorable="d" >
+    <dxmvvm:Interaction.Behaviors>
+        <ui:MessageBoxService/>
+    </dxmvvm:Interaction.Behaviors>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="355*"/>
