--- a/ASMC.Core/View/WriteText.xaml
+++ b/ASMC.Core/View/WriteText.xaml
@@ -8,9 +8,6 @@
              xmlns:ui="clr-namespace:ASMC.Core.UI"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <dxmvvm:Interaction.Behaviors>
-        <ui:MessageBoxService/>
-    </dxmvvm:Interaction.Behaviors>
     <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type Button}" x:Key="formatTextStyle">
@@ -59,7 +56,7 @@
                     <Image Source="../Image/ListNumbering.png"></Image>
                 </Button>
             </ToolBar>
-            <RichTextBox AcceptsTab="True" SpellCheck.IsEnabled="True" MinHeight="100"></RichTextBox>
+            <RichTextBox  Document="{Binding Path=Document, Mode=TwoWay, RelativeSource={RelativeSource AncestorType=local:WriteText}}"  SpellCheck.IsEnabled="True" MinHeight="100" > </RichTextBox>
         </DockPanel>
     </Grid>
 </UserControl>
