--- a/ASMC.Core/View/ProgressWindow.xaml
+++ b/ASMC.Core/View/ProgressWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:view="clr-namespace:ASMC.Core.View"
-        xmlns:ui1="clr-namespace:ASMC.Core.UI"
         mc:Ignorable="d"
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner"
@@ -28,24 +27,24 @@
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="PART_Content"
+        <TextBlock x:Name="PartContent"
                TextWrapping="Wrap"
                Grid.Column="1"
                VerticalAlignment="Center"
                MinHeight="50"/>
-        <TextBlock x:Name="PART_Status"
+        <TextBlock x:Name="PartStatus"
                TextWrapping="Wrap"
                Grid.Row="2"
-               Grid.ColumnSpan="2" Margin="0 5" />
-        <TextBlock x:Name="PART_TimeRemaining"
+               Grid.ColumnSpan="2" Grid.Column="0" Margin="0 5" />
+        <TextBlock x:Name="PartTimeRemaining"
                Grid.Row="3"
-               Grid.ColumnSpan="2" />
-        <Grid Grid.Row="4" Grid.ColumnSpan="2">
+               Grid.ColumnSpan="2" Grid.Column="0" />
+        <Grid Grid.Row="4" Grid.ColumnSpan="2" Grid.Column="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <ProgressBar x:Name="PART_Progress"
+            <ProgressBar x:Name="PartProgress"
                    Height="15"
                    Margin="0 10"
                    IsIndeterminate="True"
