--- a/ASMC/View/LoginWindow.xaml
+++ b/ASMC/View/LoginWindow.xaml
@@ -13,9 +13,10 @@
     <ui:ProgressService/>
     <ui:WindowService Name="Test" WindowShowMode="Default" Title="Test" SizeToContent="WidthAndHeight"></ui:WindowService>
         </dxmvvm:Interaction.Behaviors>
-    <Grid>
-        <!--<view:WriteText Documentdsfs="{Binding Path=Document1}"></view:WriteText>-->
-        <!--<view:UserControl1 Document="{Binding Path=Document321}"></view:UserControl1>-->
-    </Grid>
+    <view:FindEkzCard></view:FindEkzCard>
+    <!--<Grid>
+        --><!--<view:WriteText Documentdsfs="{Binding Path=Document1}"></view:WriteText>-->
+        <!--<view:UserControl1 Document="{Binding Path=Document321}"></view:UserControl1>--><!--
+    </Grid>-->
 </Page>
 
