--- a/ASMC/App.xaml
+++ b/ASMC/App.xaml
@@ -3,24 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           
              xmlns:asmc="clr-namespace:ASMC"
-             xmlns:ps="http://schemas.palitra-system.ru/winfx/xaml/core">
+             xmlns:ps="http://schemas.palitra-system.ru/winfx/xaml/core"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/Generic.xaml" />
-            </ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Resources/Resources.xaml"/>
+      </ResourceDictionary.MergedDictionaries>
 
-            <ps:MessageBoxService x:Key="MessageBoxService" />
+         
 
-            <ps:WindowService x:Key="DefaultWindowService"
+            <dxmvvm:WindowService x:Key="DefaultWindowService"
                               WindowStartupLocation="CenterScreen"
                               WindowShowMode="Default"
-                              Title=""
-                              ResizeMode="CanMinimize">
-                <ps:WindowService.SettingsSelector>
+                              Title="">
+                <!--<dxmvvm:WindowService.SettingsSelector>
                     <asmc:ViewSettingsSelector />
-                </ps:WindowService.SettingsSelector>
-            </ps:WindowService>
+                </dxmvvm:WindowService.SettingsSelector>-->
+            </dxmvvm:WindowService>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
