--- a/ASMC/Themes/Generic.xaml
+++ b/ASMC/Themes/Generic.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Themes/Hyperlink.xaml" />
-    </ResourceDictionary.MergedDictionaries>
+
+    <ResourceDictionary Source="/Themes/ValueContentControl.xaml" />
+  </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
