--- a/ASMC/View/WizardView.xaml
+++ b/ASMC/View/WizardView.xaml
@@ -8,12 +8,14 @@
              xmlns:view1="clr-namespace:ASMC.Core.View;assembly=ASMC.Core"
              xmlns:behavior="clr-namespace:ASMC.Core.Behavior;assembly=ASMC.Core"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
 
              mc:Ignorable="d"
              d:DesignHeight="650" d:DesignWidth="800">
   <UserControl.Resources>
 
     <ResourceDictionary>
+      <dx:EnumToBoolConverter x:Key="EnumToBoolConverter" />
       <GridLength x:Key="Gap">20</GridLength>
       <Style TargetType="Button">
         <Setter Property="Margin" Value="0,5,0,0" />
@@ -135,10 +137,9 @@
                   <ColumnDefinition />
                   <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <RadioButton>Первичная поверка</RadioButton>
-                <RadioButton Grid.Row="0" Grid.Column="2">Калибровка</RadioButton>
-
-                <RadioButton Grid.Row="1" Grid.Column="0">Переодическая поверка</RadioButton>
+                <RadioButton IsChecked="{Binding TypeOpertion, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=PrimaryVerf}">Первичная поверка</RadioButton>
+                <RadioButton IsChecked="{Binding TypeOpertion, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=Calibration}" Grid.Row="0" Grid.Column="2">Калибровка</RadioButton>
+                <RadioButton IsChecked="{Binding TypeOpertion, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=PeriodicVerf}" Grid.Row="1" Grid.Column="0">Переодическая поверка</RadioButton>
               </Grid>
             </GroupBox>
 
@@ -218,19 +219,18 @@
                 <ColumnDefinition Width="Auto" />
               </Grid.ColumnDefinitions>
               <StackPanel Grid.Column="0" Name="MyPalen" >
-                <TreeView ItemsSource="{Binding UserItemOperation, Mode=TwoWay}" SelectedValuePath="{Binding SelectionItemOperation}">
+                <TreeView ItemsSource="{Binding UserItemOperation, Mode=TwoWay}">
                   <TreeView.ItemTemplate>
                     <DataTemplate>
                       <CheckBox
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
-                        Content="{Binding Path= Name}">
-                        <i:Interaction.Behaviors>
-                          <behavior:IsFocesedUi SelectValue ="{Binding RelativeSource={RelativeSource Mode =FindAncestor, AncestorType={x:Type UserControl}}, Path=SelectionItemOperation, Mode=TwoWay}"/>
-                        </i:Interaction.Behaviors>
-                      </CheckBox>
+                        Content="{Binding Path= Name}"/>
                     </DataTemplate>
                   </TreeView.ItemTemplate>
+                  <i:Interaction.Behaviors>
+                    <behavior:BindableSelectedItemBeheavior SelectItem ="{Binding SelectionItemOperation, Mode=TwoWay}"/>
+                  </i:Interaction.Behaviors>
                 </TreeView>
               </StackPanel>
               <GridSplitter Grid.Column="1" Width="2"></GridSplitter>
