--- a/ASMC/Resources/Resources.xaml
+++ b/ASMC/Resources/Resources.xaml
@@ -1,10 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:viewModel1="clr-namespace:ASMC.Automation.Linear.ViewModel;assembly=ASMC.Automation.Linear"
-                    xmlns:view="clr-namespace:ASMC.Automation.Linear.View;assembly=ASMC.Automation.Linear">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <DataTemplate DataType="{x:Type viewModel1:Ich}">
-    <view:UserControl1/>
-  </DataTemplate>
 
 </ResourceDictionary>
