--- a/ASMC/View/WizardView.xaml
+++ b/ASMC/View/WizardView.xaml
@@ -11,7 +11,7 @@
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
 
              mc:Ignorable="d"
-             d:DesignHeight="650" d:DesignWidth="800">
+             d:DesignHeight="650" d:DesignWidth="800" MinWidth="800">
   <UserControl.Resources>
     <ResourceDictionary>
       <dx:EnumToBoolConverter x:Key="EnumToBoolConverter" />
