--- a/ASMC/View/WizardView.xaml
+++ b/ASMC/View/WizardView.xaml
@@ -98,17 +98,17 @@
               </Grid.ColumnDefinitions>
               <utils:ValueContentControl Header="Тип СИ"
                                          Margin="0,0,5,0">
-                <TextBox Text="{Binding Type}" />
+                <TextBox Text="{Binding Type, Mode=OneWay}" />
               </utils:ValueContentControl>
               <utils:ValueContentControl Grid.Column="1" Header="Диапазон">
-                <TextBox Text="{Binding Range}" />
+                <TextBox Text="{Binding Range, Mode=OneWay}" />
               </utils:ValueContentControl>
               <utils:ValueContentControl Grid.Column="2" Header="Х-ка точности"
                                          Margin="5,0,0,0">
-                <TextBox Text="{Binding Accuracy}" />
+                <TextBox Text="{Binding Accuracy, Mode=OneWay}" />
               </utils:ValueContentControl>
               <utils:ValueContentControl Grid.Column="3" Header="Госреестр">
-                <TextBox Text="{Binding Grsi}"
+                <TextBox Text="{Binding Grsi, Mode=OneWay}"
                          Width="115" />
               </utils:ValueContentControl>
             </Grid>
