--- a/ASMC/View/SettingView.xaml
+++ b/ASMC/View/SettingView.xaml
@@ -6,6 +6,9 @@
              xmlns:local="clr-namespace:ASMC.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+  <UserControl.Resources>
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+  </UserControl.Resources>
     <StackPanel>
    
       
@@ -59,7 +62,7 @@
             <GridViewColumn Header="Строка подключения" Width="150" >
               <GridViewColumn.CellTemplate >
                 <DataTemplate>
-                  <ComboBox Margin="5,10,5,10"  MinWidth="100" ItemsSource="{Binding Path=AddresDivece}" SelectedItem="{Binding StringConnect}"/>
+                  <ComboBox Margin="5,10,5,10"  MinWidth="100" ItemsSource="{Binding Path=AddresDivece}" Visibility="{Binding Path=IsCanStringConnect, Converter={StaticResource BooleanToVisibilityConverter}}" SelectedItem="{Binding StringConnect}"/>
                 </DataTemplate>
               </GridViewColumn.CellTemplate>
             </GridViewColumn>
