--- a/ASMC.Core/View/ReadAndWriteText.xaml
+++ b/ASMC.Core/View/ReadAndWriteText.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-             mc:Ignorable="d" >
+             mc:Ignorable="d" Width="400" Height="600" >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="355*"/>
