--- a/ASMC/View/TestingDialogView.xaml
+++ b/ASMC/View/TestingDialogView.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="ASMC.Core.View.DataView"
+﻿<UserControl x:Class="ASMC.View.TestingDialogView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ASMC.Core.View"
+             xmlns:local="clr-namespace:ASMC.View"
+             xmlns:view="clr-namespace:ASMC.Core.View;assembly=ASMC.Core"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <StackPanel>
+    <view:ReadAndWriteText/>  
+    </StackPanel>
 </UserControl>
