Добавлена новая библиотека

--- a/ASMC.Core/View/ReadAndWriteText.xaml
+++ b/ASMC.Core/View/ReadAndWriteText.xaml
@@ -13,9 +13,9 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto"
                       HorizontalAlignment="Left" Grid.ColumnSpan="2">
             <StackPanel>
-                <FlowDocumentScrollViewer DataContext="{Binding InputUserText}">
+                <RichTextBox DataContext="{Binding InputUserText}">
 
-                </FlowDocumentScrollViewer>
+                </RichTextBox>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
