--- a/ASMC.Core/View/InputTableView.xaml
+++ b/ASMC.Core/View/InputTableView.xaml
@@ -2,9 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:behavior="clr-namespace:ASMC.Core.Behavior"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:behavior="clr-namespace:ASMC.Common.Behavior;assembly=ASMC.Common"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
@@ -21,9 +21,9 @@
             <ItemsControl.ItemTemplate >
               <DataTemplate >
                 <TextBox Margin="5" x:Name="Box"  IsReadOnly="{Binding IsOnlyRead}"  DataContext="{Binding}" Text="{Binding Getting, Mode=TwoWay}" Width="{Binding RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}, Path= WidthCell, Mode=TwoWay}" Height="30">
-                  <i:Interaction.Behaviors>
+                  <!--<i:Interaction.Behaviors>
                     <behavior:IsFocesedUi SelectValue ="{Binding RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}, Path=SelectValue, Mode=TwoWay}"/>
-                  </i:Interaction.Behaviors>
+                  </i:Interaction.Behaviors>-->
                 </TextBox>
                 <DataTemplate.Triggers>
                   <Trigger SourceName="Box" Property="IsFocused" Value="true">
