--- a/ASMC/App.xaml
+++ b/ASMC/App.xaml
@@ -5,14 +5,15 @@
              xmlns:asmc="clr-namespace:ASMC"
              xmlns:ps="http://schemas.palitra-system.ru/winfx/xaml/core"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-             xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core">
+             xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core"
+             xmlns:ui1="clr-namespace:ASMC.Common.UI;assembly=ASMC.Common">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/Generic.xaml" />
         <ResourceDictionary Source="Resources/Resources.xaml"/>
       </ResourceDictionary.MergedDictionaries>
-            <ui:WindowService x:Key="DefaultWindowService"
+            <ui1:WindowService x:Key="DefaultWindowService"
                               WindowStartupLocation="CenterScreen"
                               WindowShowMode="Default"
                               Title=""
@@ -20,7 +21,7 @@
                 <!--<dxmvvm:WindowService.SettingsSelector>
                     <asmc:ViewSettingsSelector />
                 </dxmvvm:WindowService.SettingsSelector>-->
-            </ui:WindowService>
+            </ui1:WindowService>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
