--- a/ASMC.Core/View/QuestionTextView.xaml
+++ b/ASMC.Core/View/QuestionTextView.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl xmlns:view="clr-namespace:ASMC.Core.View"  x:Class="ASMC.Core.View.ReadAndWriteText"
+﻿<UserControl  x:Class="ASMC.Core.View.QuestionTextView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:xceed="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:view1="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
              mc:Ignorable="d" Width="400" Height="600" >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -13,9 +15,7 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto"
                       HorizontalAlignment="Left" Grid.ColumnSpan="2">
             <StackPanel>
-                <RichTextBox DataContext="{Binding InputUserText}">
-
-                </RichTextBox>
+                <xceed:RichTextBox Text="{Binding InputUserText}"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
@@ -24,7 +24,7 @@
                     <RadioButton Grid.Column="0" Content="dfsadasdsadsa" IsChecked="True"/>
                     <RadioButton Grid.Column="1" Content="dfsadas"/>
                 </Grid>
-                <view:WriteText />
+                <!--<view1:WriteText />-->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
