--- a/ASMC.Core/View/QuestionTextView.xaml
+++ b/ASMC.Core/View/QuestionTextView.xaml
@@ -1,32 +1,45 @@
 ﻿<UserControl x:Class="ASMC.Core.View.QuestionTextView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ASMC.Core.View"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             xmlns:view="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
-             mc:Ignorable="d" 
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-  <Grid>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="355*"/>
-      <ColumnDefinition Width="209*"/>
-    </Grid.ColumnDefinitions>
-    <ScrollViewer VerticalScrollBarVisibility="Auto"
-                  HorizontalAlignment="Left" Grid.ColumnSpan="2">
-      <StackPanel>
-        <xctk:RichTextBox Text="{Binding InputUserText}"/>
-        <Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-          </Grid.ColumnDefinitions>
-          <RadioButton Grid.Column="0" Content="dfsadasdsadsa" IsChecked="True"/>
-          <RadioButton Grid.Column="1" Content="dfsadas"/>
-        </Grid>
-                <StackPanel><TextBox/></StackPanel>
-      </StackPanel>
-    </ScrollViewer>
-  </Grid>
+    <UserControl.Resources>
+        <dxmvvm:BooleanNegationConverter x:Key="BooleanNegationConverter" />
+        <dx:ObjectToVisibilityConverter x:Key="ObjectToVisibilityConverter" />
+        <dx:ObjectToVisibilityConverter x:Key="InvertObjectToVisibilityConverter" Invert="True" />
+    </UserControl.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="355*" />
+            <ColumnDefinition Width="209*" />
+        </Grid.ColumnDefinitions>
+        <ScrollViewer VerticalScrollBarVisibility="Auto"
+                      HorizontalAlignment="Left" Grid.ColumnSpan="2">
+            <StackPanel>
+                <!--<TextBlock Text="{Binding Description}"
+                           Visibility="{Binding FileNameDescription,Converter={StaticResource InvertObjectToVisibilityConverter}}" />-->
+
+                <xctk:RichTextBox  Text="{Binding Description}"
+                                  Height ="200" />
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <RadioButton Grid.Column="0" Content="Соответствует"
+                                 IsChecked="{Binding CheckBox, Converter={StaticResource BooleanNegationConverter}}" />
+                    <RadioButton Grid.Column="1" Content="Не соответствует" IsChecked="{Binding CheckBox}" />
+                </Grid>
+                <StackPanel>
+                    <TextBox Text="{Binding ResultStr}" TextWrapping="Wrap" />
+                </StackPanel>
+            </StackPanel>
+        </ScrollViewer>
+    </Grid>
 </UserControl>
